xOpera/k8s_manifests/xopera.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xopera-deployment
  labels:
    app: xopera
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xopera
  template:
    metadata:
      labels:
        app: xopera
    spec:
      containers:
      - name: xopera
        image: sodaliteh2020/xopera-rest-api:2.4.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: xopera-service
spec:
  selector:
    app: xopera
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xopera-ingress
spec:
  tls:
  - hosts:
      - xopera.com
    secretName: xopera-secret-tls
  rules:
  - host: xopera.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xopera-service
            port:
              number: 8080
